--- a/ms/invasibility-ms.Rmd
+++ b/ms/invasibility-ms.Rmd
@@ -65,7 +65,7 @@ For all three conifer species groups, we found that ecosystem type was responsib
 When we stratified wildling abundance by height class (≥ 30 cm and $≥ 100 cm), we also found evidence that some ecosystems are more conducive to establishment (reaching 30 cm) than growth (reaching 100 cm), and vice versa.
 4. Agricultural ecosystems of various kinds were among the ecosystems least susceptible to wildling establishment of all three groups of conifer species.
 5. *Synthesis and applications* We encourage managers to exploit the large differences in susceptibility between ecosystems to reduce the spread of alien conifers. 
-New plantations should be sited among ecosystems with low susceptibility, and efforts to control wildlings should play close attention to susceptible ecosystems---even if these are not (yet) exposed to high levels of seed rain.
+New plantations should be sited among ecosystems with low susceptibility, and efforts to control wildlings should play close attention to susceptible ecosystems --- even if these are not (yet) exposed to high levels of seed rain.
 In Norway, situating plantations within a landscape matrix of agricultural ecosystems is an effective way to reduce alien conifer spread.
 
 # Keywords
@@ -76,44 +76,42 @@ alien species, conifer, establishment likelihood, exposure, invasibility, planta
 
 # Introduction
 
-*Alien conifer plantations are a big deal*
+```{r include = FALSE}
+# Structure [@barlowAchievingCommunicatingGlobally2016]
+# 1. why the topic is important in the broadest sense, which for an applied study should highlight the societal importance
+# 2. the state of the science, including the narrower subject, region, community and species-specific context
+# 3. the key knowledge gaps and why they matter
+# 4. an outline of how this paper will meet the knowledge gaps, why this is novel, and the aims and hypotheses it will test.
+```
+
+## Part 1: why the topic is important in the broadest sense, which for an applied study should highlight the societal importance
+
+### Alien conifer plantations are a big deal
 While there is a long history of using alien conifers in forestry, alien conifer plantations are not a thing of the past.
 In many parts of the world, commercial forestry relies on alien conifer species [@ref].
-Afforestation programs proposed for climate change mitigation and other benefits may also include alien species [@brightEvaluatingTerrestrialCarbon2020, @teururakaunewzealandforestserviceOneBillionTrees2018].
+Alien conifer species may also be included in some of the many large afforestation programs proposed to mitigate climate change [@brightEvaluatingTerrestrialCarbon2020, @teururakaunewzealandforestserviceOneBillionTrees2018].
 Therefore, it is likely that alien conifers will continue to be planted across large areas in coming decades, sometimes in regions where a given species has not previously occurred.
 
-*We want to prevent wildlings from plantations*
+### We want to prevent spread from plantations
 Responsible forestry practice requires that alien species be kept within plantation boundaries [@brunduGlobalGuidelinesSustainable2020]. 
-Alien conifer invasions have proven damaging and costly in many parts of the world, and it is prudent to prevent the initial spread from plantations --- both to protect the integrity of surrounding ecosystems and to block secondary, potentially invasive spread [@nunezEcologyManagementInvasive2017].
+It is prudent to prevent the initial spread from plantations both to protect the integrity of surrounding ecosystems and to block secondary, potentially invasive spread [@nunezEcologyManagementInvasive2017].
+Alien conifer plantations generally produce self-sown individuals ("wildlings") outside plantation boundaries, and these may threaten the integrity of existing ecosystems. 
 For example, most pine invasions into protected areas in South Africa can be attributed directly to nearby plantations [@mcconnachieEstimatingEffectPlantations2015].
+Alien conifer invasions have proven damaging and costly in many parts of the world, so we need ways to prevent spread from plantations into surroundings.
 
-It is prudent to prevent the spread of self-sown individuals --- or "wildlings" --- because they threaten the integrity of existing ecosystems.
-Where alien conifers species are planted, their spread into surroundings should be prevented.
-It is prudent to prevent the spread of self-sown individuals, or wildlings, from plantations, as these often harm biodiversity and other values.
-In many instances these self-sown individuals, or wildlings, harm biodiversity and other values.
-Preventing escape from plantations safeguards plantation surroundings and also blocks secondary, potentially invasive spread.
+## Part 2: the state of the science, including the narrower subject, region, community and species-specific context
 
-Offspring from alien conifer plantations frequently establish outside the boundaries of the plantation [@nunezEcologyManagementInvasive2017].
-Alien conifer plantations generally produce self-sown individuals outside plantation boundaries, and these often threaten the integrity of existing ecosystems. 
+### Wildlings establish in some ecosystems more readily than others
+In large measure, the rate at which wildlings establish and grow outside a plantation will depend on the biotic and abiotic conditions there.  
+Wildlings will establish and grow more readily in some ecosystems than others, depending on the autecology of the species.
+Spatial distributions of wildlings vary from plantation to plantation [@fernandesWhatDrivesEucalyptus2018; @nygaardSpreadIntroducedSitka2017] at least partly because there are differences in the composition and spatial configuration of surrounding ecosystems.
+All else being equal, some ecosystems will harbor more wildlings than others.
 
-*Wildlings establish in some ecosystems more readily than others* 
-Naturally, wildlings establish in some ecosystems more readily than others.
-More or less favorable conditions depending on the autecology of the conifer species.
-Assessing which ecosystems are most susceptible is an urgent priority.
+### What we know about wildlings across ecosystems
+Use @nygaardOkologiskOgSkogbruksmessig2021 as an example of *vulnerability* being ahead of *susceptibility* 
 
-The spatial distribution of wildlings around a plantation varies a lot from site to site, even among conspecific stands of similar age [@fernandesWhatDrivesEucalyptus2018; @nygaardSpreadIntroducedSitka2017], which suggests that surrounding ecosystems are not equally invasible.
-To better understand this variation, we need to consider the processes of dispersal establishment (germination and growth), which jointly generate patterns of wildling abundance in space.
-Plantation conifers generally have wind-vectored seed dispersal, which has received significant research attention and can be reconstructed with relative confidence [@nathanDispersalKernels2012].
-Establishment is affected by biotic and abiotic conditions where seeds arrive.
-
-*Context dependence: specific stage of specific alien into specific ecosystem*
-define establishment as reaching a certain height?
-You'll only know once its there --- difficulty of generalizing invasibility patterns.
-
-*Relative abundance != relative susceptibility*
-define vulnerable vs susceptible
-
-The susceptibility of plantation surroundings may be manipulated retrospectively through interventions around existing plantations or prospectively through plantation site selection.
+### Relative abundance != relative susceptibility
+define vulnerable vs susceptible.
 
 Naively, the density of wildlings in a given ecosystem would seem to indicate how likely they are to establish there.
 But to estimate ecosystem establishment likelihoods based on wildling abundance around plantation stands, we must account for (1) seed dispersal, and (2) sources of variation in establishment beside ecosystem type.
@@ -121,24 +119,36 @@ For example, low establishment likelihood in an ecosystem frequently located clo
 Likewise, an ecosystem may appear to promote establishment if it tends to co-occur with climatic conditions that support germination.
 Once estimated, unconfounded establishment likelihoods may be used to predict how susceptible the surroundings of an unobserved plantation are, based on ecosystem composition.
 
-*Assess establishment across what?*
+## Part 3: the key knowledge gaps and why they matter
+
+- Ecosystem susceptibility in Norway
+- How much susceptibility deviates from vulnerability
+
+### Context dependence: specific stage of specific alien into specific ecosystem
+define establishment as reaching a certain height?
+You'll only know once its there --- difficulty of generalizing invasibility patterns.
+### Assess early
+It is clear from extensive experience with alien conifer invasions in several parts of the world that control interventions need to be focused on the early stages of invasion [@nunezEcologyManagementInvasive2017].
+The early stages are also those are most strongly shaped by contingencies of exposure: few plantations = unrepresentative sample of ecosystems, before secondary spread.
+### Assess establishment across management units
 Using a standardized (national or international) ecosystem classification system makes it easy for managers to transfer findings about ecosystem susceptibility directly to management decisions.
 In Norway, the national land mapping classification system sorts variation in local ecological conditions [@halvorsenSystematicsEcodiversityEcoSyst2020].
 It aims for reproducible and value-neutral classification of ecosystems by rule-based discretization of species turnover along important environmental gradients [@halvorsenSystematicsEcodiversityEcoSyst2020].
 As a result, its ecosystem types (hereafter: "ecosystems") encapsulate much of the variation likely to regulate wildling establishment --- in competition, nutrient availability, disturbance, etc. [@richardsonNaturalizationIntroducedPlants2012].
 
-*Conifer plantations as invasion science experiments*
 Determining which ecosystems are most susceptible so that interventions can be prioritized objectively is among the most urgent objectives for invasion science [@pysekScientistsWarningInvasive2020].
-Studying ecosystem invasibility is tractable with plantations of alien conifers because their seeds are wind-dispersed, so we can estimate ecosystem exposure to seed rain from plantations with some confidence [@catfordQuantifyingLevelsBiological2012].
 
-It is clear from extensive experience with alien conifer invasions in several parts of the world that control interventions need to be focused on the early stages of invasion [@nunezEcologyManagementInvasive2017].
+## Part 4: an outline of how this paper will meet the knowledge gaps, why this is novel, and the aims and hypotheses it will test.
+
+### Wind dispersal makes early exposure tractable
+Plantation conifers generally have wind-vectored seed dispersal, which can be estimated with relative confidence [@nathanDispersalKernels2012].
+Studying ecosystem invasibility is tractable with plantations of alien conifers because their seeds are wind-dispersed, so we can estimate ecosystem exposure to seed rain from plantations with some confidence [@catfordQuantifyingLevelsBiological2012].
 
 We examine plantations of alien conifers in Norway to investigate the following questions:
 
-- What is the relative susceptibility of ecosystems neighboring alien conifer wildlings in Norway?
-- How susceptible to wildling establishment are the ecosystems that neighbor alien conifer plantations in Norway?
-- How much do ecosystems vary in their susceptibility to alien conifer wildlings?
-- In which ecosystems are wildlings of alien conifers most and least likely to establish?
+- Which Norwegian ecosystems are most and least susceptible to wildlings of common alien conifer species?
+- How much do ecosystems vary in their susceptibility to wildling establishment and growth?
+- Are differences in susceptibility among ecosystems masked by differences in exposure to seed rain?
 
 # Materials and methods
 
