--- a/ms/invasibility-ms.Rmd
+++ b/ms/invasibility-ms.Rmd
@@ -87,30 +87,32 @@ alien species, conifer, establishment likelihood, exposure, invasibility, planta
 ## Part 1: why the topic is important in the broadest sense, which for an applied study should highlight the societal importance
 
 ### Alien conifer plantations are a big deal
-While there is a long history of using alien conifers in forestry, alien conifer plantations are not a thing of the past.
-In many parts of the world, commercial forestry relies on alien conifer species [@ref].
+While there is a long history of using alien conifers in forestry, planting conifers at scale in places where they are not native is hardly a thing of the past.
+Commercial forestry relies on alien conifer species in many parts of the world, with 44 % of plantation forests globally composed mainly of introduced species [@faoGlobalForestResources2020].
 Alien conifer species may also be included in some of the many large afforestation programs proposed to mitigate climate change [@brightEvaluatingTerrestrialCarbon2020, @teururakaunewzealandforestserviceOneBillionTrees2018].
 Therefore, it is likely that alien conifers will continue to be planted across large areas in coming decades, sometimes in regions where a given species has not previously occurred.
 
-### We want to prevent spread from plantations
-Responsible forestry practice requires that alien species be kept within plantation boundaries [@brunduGlobalGuidelinesSustainable2020]. 
-It is prudent to prevent the initial spread from plantations both to protect the integrity of surrounding ecosystems and to block secondary, potentially invasive spread [@nunezEcologyManagementInvasive2017].
-Alien conifer plantations generally produce self-sown individuals ("wildlings") outside plantation boundaries, and these may threaten the integrity of existing ecosystems. 
-For example, most pine invasions into protected areas in South Africa can be attributed directly to nearby plantations [@mcconnachieEstimatingEffectPlantations2015].
-Alien conifer invasions have proven damaging and costly in many parts of the world, so we need ways to prevent spread from plantations into surroundings.
+### We want to prevent initial spread from plantations
+Responsible forestry practice requires that alien species be kept within plantation boundaries [@brunduGlobalGuidelinesSustainable2020], but alien conifer plantations generally produce self-sown individuals beyond the plantation ("wildlings").
+It is prudent to prevent wildlings both to protect the integrity of surrounding ecosystems and to block secondary, potentially invasive spread [@nunezEcologyManagementInvasive2017].
+Alien conifer invasions usually stem from plantations --- like the pines in South Africa, to name just one example [@mcconnachieEstimatingEffectPlantations2015] --- and conifer invasions have proven damaging and costly in various places on several continents.
+Combined with the expectation of future plantations, invasions highlight the importance of preventing wildlings.
 
 ## Part 2: the state of the science, including the narrower subject, region, community and species-specific context
 
-### Wildlings establish in some ecosystems more readily than others
-In large measure, the rate at which wildlings establish and grow outside a plantation will depend on the biotic and abiotic conditions there.  
-Wildlings will establish and grow more readily in some ecosystems than others, depending on the autecology of the species.
-Spatial distributions of wildlings vary from plantation to plantation [@fernandesWhatDrivesEucalyptus2018; @nygaardSpreadIntroducedSitka2017] at least partly because there are differences in the composition and spatial configuration of surrounding ecosystems.
-All else being equal, some ecosystems will harbor more wildlings than others.
+### The mechanisms that govern wildling appearance, especially local conditions
+Wildlings appear via a process that starts with seed production, then seed dispersal, followed by seedling establishment and growth.
+If we focus on seedling establishment and growth, the rate at which wildlings accumulate depends on biotic and abiotic conditions where seeds arrive.
+Factors like seed bed availability, soil moisture content, and light availability are likely among the most important determinants of establishment and growth success --- as is the case for natural regeneration native conifers [@ref].
+Foresters have long used natural vegetation composition to forecast the success of different conifer species in particular locations [@savillPlantationSilvicultureEurope1997]
+Wildlings establish and grow more readily in some ecosystems than others, depending on the autecology of the species [@ref].
+Difficulty of generalizing invasibility patterns.
 
-### What we know about wildlings across ecosystems
-Use @nygaardOkologiskOgSkogbruksmessig2021 as an example of *vulnerability* being ahead of *susceptibility* 
 
-### Relative abundance != relative susceptibility
+
+### Don't forget about seed production and dispersal! Relative abundance != relative susceptibility
+Use @nygaardOkologiskOgSkogbruksmessig2021 as an example of *vulnerability* being ahead of *susceptibility*.?
+
 define vulnerable vs susceptible.
 
 Naively, the density of wildlings in a given ecosystem would seem to indicate how likely they are to establish there.
@@ -119,32 +121,47 @@ For example, low establishment likelihood in an ecosystem frequently located clo
 Likewise, an ecosystem may appear to promote establishment if it tends to co-occur with climatic conditions that support germination.
 Once estimated, unconfounded establishment likelihoods may be used to predict how susceptible the surroundings of an unobserved plantation are, based on ecosystem composition.
 
+### Alien conifers in Norway
+Large scale reforestation/afforestation during the second half of the 20th century, especially along the western coastlines [@miljodirektoratetUtredningAvForbud2019]. 
+Conifer-poor
+Coastal heathlands
+
 ## Part 3: the key knowledge gaps and why they matter
 
-- How much susceptibility deviates from vulnerability
-- How much of wildling abundance is controlled by ecosystem identity---how consistent susceptibility is.
-- Ecosystem susceptibility in Norway (conifer-poor, like southern hemisphere)
-
-### Context dependence: specific stage of specific alien into specific ecosystem
-define establishment as reaching a certain height?
-You'll only know once its there --- difficulty of generalizing invasibility patterns.
-### Assess early
-It is clear from extensive experience with alien conifer invasions in several parts of the world that control interventions need to be focused on the early stages of invasion [@nunezEcologyManagementInvasive2017].
+### How much susceptibility deviates from vulnerability 
+Is the observed distribution of wildlings representative of what we can expect for new plantations in new places, or are we missing important contingencies?
+Assess early: it is clear from extensive experience with alien conifer invasions in several parts of the world that control interventions need to be focused on the early stages of invasion [@nunezEcologyManagementInvasive2017].
 The early stages are also those are most strongly shaped by contingencies of exposure: few plantations = unrepresentative sample of ecosystems, before secondary spread.
 
+### How much of wildling abundance is controlled by ecosystem identity --- how consistent susceptibility is 
+Can we achieve meaningful reductions in wildling abundance by controlling the composition of plantation surroundings? **does this undermine the introduction claim about abiotic/biotic conditions controlling wildlings?**
+
+### Ecosystem susceptibility in conifer-poor Norway 
+County governors need a basis for determining where to allow alien conifer plantations
+Context dependence: specific stage of specific alien into specific ecosystem
+(define establishment as reaching a certain height?)
+You'll only know once its there --- difficulty of generalizing invasibility patterns.
+The conditions that govern seedling establishment and growth in plantation surroundings may be manipulated directly, by physical interventions, or indirectly, by site selection.
 Determining which ecosystems are most susceptible so that interventions can be prioritized objectively is among the most urgent objectives for invasion science [@pysekScientistsWarningInvasive2020].
 
 ## Part 4: an outline of how this paper will meet the knowledge gaps, why this is novel, and the aims and hypotheses it will test.
+
+### How this paper will meet the knowledge gaps
+1. Detailed surveys of the spatial distributions of wildlings as well as ecosystem types
+2. Mechanistic reconstruction of spatial distribution of seed rain.
+3. Causally-informed statistical models of wildling abundance as a function of ecosystem type.
 
 ### Wind dispersal makes early exposure tractable
 Plantation conifers generally have wind-vectored seed dispersal, which can be estimated with relative confidence [@nathanDispersalKernels2012].
 Studying ecosystem invasibility is tractable with plantations of alien conifers because their seeds are wind-dispersed, so we can estimate ecosystem exposure to seed rain from plantations with some confidence [@catfordQuantifyingLevelsBiological2012].
 
-### Assess establishment across management units
+### Establishment across management units
 Using a standardized (national or international) ecosystem classification system makes it easy for managers to transfer findings about ecosystem susceptibility directly to management decisions.
 In Norway, the national land mapping classification system sorts variation in local ecological conditions [@halvorsenSystematicsEcodiversityEcoSyst2020].
 It aims for reproducible and value-neutral classification of ecosystems by rule-based discretization of species turnover along important environmental gradients [@halvorsenSystematicsEcodiversityEcoSyst2020].
 As a result, its ecosystem types (hereafter: "ecosystems") encapsulate much of the variation likely to regulate wildling establishment --- in competition, nutrient availability, disturbance, etc. [@richardsonNaturalizationIntroducedPlants2012].
+Furthermore, the system's full areal coverage means that we can investigate susceptibility across all types of land cover, many of which are irrelevant from a forestry perspective and therefore seldom evaluated with respect to regeneration (e.g. agriculturally improved grassland).
+
 
 We examine plantations of alien conifers in Norway to investigate the following questions:
 
@@ -331,6 +348,11 @@ knitr::include_graphics(here('ms', 'figures', 'establishment-hypotheses.pdf'))
 \newpage
 
 # Discussion
+
+```{r include = FALSE}
+# Our results support earlier suggestions that agricultural areas with more intensive cultivation practices (e.g. cereal fields) are less sensitive to invasion than more extensively-managed agricultural area [@dodetWhenShouldExotic2012]. 
+# We found a larger effect of local conditions on wildling abundance (relative to propagule pressure) than @pauchardPineInvasionsTreeless2016. Why? First and foremost: their 3 ha of surveyed plots span much less variation in conditions than our range of ecosystem types. Secondly, they tested individual species as covariates, which may not integrate overall effects of the community?
+```
 
 ## How does wildling density relate to ecosystem susceptibility?
 
